Fixed candidate section alignment issues

--- a/src/components/common/candidate-section/candidate-section.scss
+++ b/src/components/common/candidate-section/candidate-section.scss
@@ -15,6 +15,16 @@
   }
 }
 
+.button-column {
+  position: relative;
+  bottom: 20px;
+}
+
+.nameHeader {
+position: relative;
+top: 20px;
+}
+
 .candidate-top-row {
   margin-top: 0;
   padding-top: 0;
